# genomepop

./: README.md  pyproject.toml  setup.py
genomepop/: cltools.py  localancestry.py
