[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "santiago"
version = "0.0.1"
authors = [
  { name="Santiago Medina", email="santiago.medina@cinvestav.mx" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/santiago1234/genomepop"
"Bug Tracker" = "https://github.com/santiago1234/genomepop/issues"
